--- a/src/components/cartModalItem/cartModalItem.css
+++ b/src/components/cartModalItem/cartModalItem.css
@@ -79,7 +79,7 @@
 	background-color: transparent;
 	background-repeat: no-repeat;
 	cursor: pointer;
-	overflow: hidden;
+
 	outline: none;
 }
 
