--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -58,7 +58,7 @@ a.active {
 	background-repeat: no-repeat;
 	border: none;
 	cursor: pointer;
-	overflow: hidden;
+
 	outline: none;
 }
 
