--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500&family=Roboto+Condensed:wght@700&family=Roboto:wght@300;400&family=Source+Sans+Pro:wght@300;400&display=swap');
 
 body {
-	overflow-y: scroll;
+	overflow: hidden;
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
 		'Droid Sans', 'Helvetica Neue', sans-serif;
