--- a/src/pages/ProductPage.css
+++ b/src/pages/ProductPage.css
@@ -112,7 +112,7 @@
 	color: #ffffff;
 	text-transform: uppercase;
 	cursor: pointer;
-	overflow: hidden;
+
 	outline: none;
 }
 
